# hackernews-simulation

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  pyproject.toml  run.sh
.github/workflows/: config.yaml
data/: items_trunc.json
data/snapshots/: snapshot_1.json
eval/: eval.py  hyperparam_search.py  snapshot_scraper.py
hn_core/: agent.py  environment.py  main.py  personas.jsonl  post.py  utils.py
hn_core/api/: app.py  model.py
hn_core/app/: app.py
hn_core/core/: agent.py  constants.py  environment.py  hn_persona.py  model.py  post.py
hn_core/model/: agent_model.py
hn_core/personas/: hn_persona.py  template.txt
hn_core/prompts/: agent_prompt.txt  agent_prompt_template.txt  prompt.py
hn_core/provider/: huggingface.py  litellm.py
hn_core/simulation/: agent.py  environment.py  hn_persona.py  model.py  persona.py  post.py  run.py
hn_core/utils/: logger.py  storage.py  utils.py
personas_data/: personas.jsonl
script/: run.sh  test_simulation.py
tests/: __init__.py  mock_prompt_template.txt  test_agent.py  test_environment.py  test_post.py
