[project]
name = "hn-core"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "litellm (>=1.59.6,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "openai (>=1.60.1,<2.0.0)",
    "boto3 (>=1.36.9,<2.0.0)",
    "huggingface-hub (>=0.28.1,<0.29.0)",
    "markdownify (>=0.14.1,<0.15.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.27.1,<0.28.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
optuna = "^4.2.0"
selenium = "^4.28.1"
webdriver-manager = "^4.0.2"
