[project]
name = "hn-core"
version = "0.1.0"
description = "HackerNews Simulation using AI agents"
authors = [
    {name = "Daniel Lee",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "litellm (>=1.59.6,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "openai (>=1.60.1,<2.0.0)",
    "markdownify (>=0.14.1,<0.15.0)",
    "uvicorn (>=0.27.1,<0.28.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "streamlit (>=1.42.1,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

